--- a/src/chat.html
+++ b/src/chat.html
@@ -2,9 +2,14 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Document</title>
+  <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <title>Chat - Project Maximus - SportsUnity Control Station</title>
+  <link rel="stylesheet" href="../node_modules/materialize-css/dist/css/materialize.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   Chat Control Page.
+  <script src="../node_modules/jquery/dist/jquery.js"></script>
+  <script src="../node_modules/materialize-css/dist/js/materialize.js"></script>
 </body>
 </html>
