--- a/src/index.html
+++ b/src/index.html
@@ -46,6 +46,6 @@
   </main>
   <script src="../node_modules/jquery/dist/jquery.js"></script>
   <script src="../node_modules/materialize-css/dist/js/materialize.js"></script>
-  <script src="js/chat.js"></script>
+  <script src="js/login.js"></script>
 </body>
 </html>
