added es6 promises and strophe library

--- a/src/chat.html
+++ b/src/chat.html
@@ -143,8 +143,13 @@
     <div class="chat-windows-wrapper"></div>
   </main>
 
+  <script src="../node_modules/es6-promise/dist/es6-promise.js"></script>
   <script src="../node_modules/jquery/dist/jquery.js"></script>
   <script src="../node_modules/materialize-css/dist/js/materialize.js"></script>
+  <script src="../node_modules/strophe/strophe.js"></script>
+  <script src="../node_modules/strophe.pubsub.js"></script>
+  <script src="../node_modules/flXHR.js"></script>
+  <script src="../node_modules/strophe.flxhr.js"></script>
 </body>
 
 </html>
