added chat window html and css

--- a/src/chat.html
+++ b/src/chat.html
@@ -140,7 +140,34 @@
         </ul>
       </div>
     </div>
-    <div class="chat-windows-wrapper"></div>
+    <div class="chat-windows-wrapper">
+      <div class="box chat-window">
+        <div class="header">
+          <i class="material-icons">chat</i>
+          <div class="title">The Troubled vs The Consistently Consistent: Pakistan vs England</div>
+          <a href="#" class="close-chat"><i class="material-icons">clear</i></a>
+        </div>
+        <ul class="chat-messages">
+          <li class="chat-message us">
+            Hello Guys..
+          </li>
+          <li class="chat-message them">
+            Hey man!
+          </li>
+          <li class="chat-message them">
+            How is it going..
+          </li>
+          <li class="chat-message us">
+            Pretty Good.. Thanks.
+          </li>
+        </ul>
+        <div class="send-message">
+          <i class="material-icons emotions-icon">insert_emoticon</i>
+          <input type="text" placeholder="Start Chatting">
+          <i class="material-icons attach-icon">wb_cloudy</i>
+        </div>
+      </div>
+    </div>
   </main>
 
   <script src="../node_modules/es6-promise/dist/es6-promise.js"></script>
