--- a/src/chat.html
+++ b/src/chat.html
@@ -5,6 +5,8 @@
    <meta charset="UTF-8">
    <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
    <title>Chat - Project Maximus - SportsUnity Control Station</title>
+   <link href='https://fonts.googleapis.com/css?family=Inconsolata:400,700' rel='stylesheet' type='text/css'>
+   <link href='https://fonts.googleapis.com/css?family=Merriweather+Sans' rel='stylesheet' type='text/css'>
    <link rel="stylesheet" href="../node_modules/materialize-css/dist/css/materialize.css">
    <link rel="stylesheet" href="style.css">
 </head>
@@ -16,14 +18,23 @@
          <li class="logo">
             <a href="chat.html" class="brand-logo">Project Maximus</a>
          </li>
-         <li>
-            <a href="chat.html">Chat Control</a>
+         <li class="active">
+            <a href="chat.html">
+               <i class="material-icons left">chat</i>
+               Chat Control
+            </a>
          </li>
          <li>
-            <a href="news.html">News Control</a>
+            <a href="news.html">
+               <i class="material-icons left">inbox</i>
+               News Control
+            </a>
          </li>
          <li>
-            <a href="stats.html">Stats Control</a>
+            <a href="stats.html">
+               <i class="material-icons left">pie_chart</i>
+               Stats Control
+            </a>
          </li>
       </ul>
    </header>
