So much work done that i am lost. anyways, tomorow

--- a/src/chat.html
+++ b/src/chat.html
@@ -46,7 +46,11 @@
                <input type="search" placeholder="Search for a Group">
                <i class="material-icons">search</i>
             </div>
-            <ul class="groups-list"></ul>
+            <ul class="groups-list">
+               <li class="loading">
+                  Loading Groups.. Please wait..
+               </li>
+            </ul>
          </div>
       </div>
       <div class="chat-windows-wrapper"></div>
