added easy and fast searching inside group list.

--- a/src/chat.html
+++ b/src/chat.html
@@ -63,6 +63,9 @@
    <script src="../node_modules/strophe.pubsub.js"></script>
    <script src="../node_modules/flXHR.js"></script>
    <script src="../node_modules/strophe.flxhr.js"></script>
+   <script src="../node_modules/holmes.js/js/holmes.js"></script>
+   <script src="../node_modules/holmes.js/js/microlight.js"></script>
+
    <script src="js/chat.js"></script>
 </body>
 
