updated readme. added bold to logo.

--- a/src/chat.html
+++ b/src/chat.html
@@ -16,7 +16,9 @@
    <header>
       <ul class="side-nav fixed">
          <li class="logo">
-            <a href="chat.html" class="brand-logo">Project Maximus</a>
+            <a href="chat.html" class="brand-logo">
+               Project Maximus
+            </a>
          </li>
          <li class="active">
             <a href="chat.html">
