--- a/src/news.html
+++ b/src/news.html
@@ -39,7 +39,11 @@
    </header>
 
    <main id="news">
-
+      <div class="container">
+         <div class="row">
+            
+         </div>
+      </div>
    </main>
 
    <script src="../node_modules/jquery/dist/jquery.js"></script>
