--- a/src/news.html
+++ b/src/news.html
@@ -41,7 +41,40 @@
    <main id="news">
       <div class="container">
          <div class="row">
-            
+            <div class="col s12">
+               <table>
+                  <thead>
+                     <th data-field="sr.no">Sr. no</th>
+                     <th data-field="sports-type">Sports Type</th>
+                     <th data-field="news-item">News</th>
+                     <th data-field="date">Date</th>
+                     <th data-field="status">Status</th>
+                     <th data-field="actions">Actions</th>
+                  </thead>
+                  <tbody>
+                     <tr>
+                        <td>Atque</td>
+                        <td>23/12/2010</td>
+                        <td>Published</td>
+                     </tr>
+                     <tr>
+                        <td>Vitae Aut Temporibus Ut</td>
+                        <td>4/9/2001</td>
+                        <td>Pending</td>
+                     </tr>
+                     <tr>
+                        <td>Eius Facilis Quae Saepe</td>
+                        <td>25/2/2007</td>
+                        <td>Draft</td>
+                     </tr>
+                     <tr>
+                        <td>Eos Temporibus A Reiciendis</td>
+                        <td>13/12/2004</td>
+                        <td>Published</td>
+                     </tr>
+                  </tbody>
+               </table>
+            </div>
          </div>
       </div>
    </main>
