created a very simple add news page.

--- a/src/news.html
+++ b/src/news.html
@@ -39,6 +39,11 @@
    </header>
 
    <main id="news">
+      <ul class="secondary-menu">
+         <li>All News</li>
+         <li>Add News</li>
+         <li>Carousel Control</li>
+      </ul>
       <div class="container">
          <div class="row">
             <div class="col s12">
