lots of trying to deal with news. blehh!

--- a/src/news.html
+++ b/src/news.html
@@ -40,14 +40,24 @@
 
    <main id="news">
       <ul class="secondary-menu">
-         <li>All News</li>
-         <li>Add News</li>
-         <li>Carousel Control</li>
+         <li><a href="news.html" class="active">All News</a></li>
+         <li><a href="news_add.html">Add News</a></li>
       </ul>
-      <div class="container">
-         <div class="row">
+      <div class="content">
+         <div class="carousel-control row">
             <div class="col s12">
-               <table>
+               <div class="box box1"></div>
+               <div class="box box2"></div>
+               <div class="box box3"></div>
+               <div class="box box4"></div>
+            </div>
+            <div class="col s12">
+               <a href="#!" class="btn waves-effect waves-light">Save Carousel</a>
+            </div>
+         </div>
+         <div class="news-table row">
+            <div class="col s12">
+               <table class="bordered striped highlight">
                   <thead>
                      <th data-field="sr.no">Sr. no</th>
                      <th data-field="sports-type">Sports Type</th>
@@ -77,6 +87,67 @@
                         <td>13/12/2004</td>
                         <td>Published</td>
                      </tr>
+                     <tr>
+                        <td>Atque</td>
+                        <td>23/12/2010</td>
+                        <td>Published</td>
+                     </tr>
+                     <tr>
+                        <td>Vitae Aut Temporibus Ut</td>
+                        <td>4/9/2001</td>
+                        <td>Pending</td>
+                     </tr>
+                     <tr>
+                        <td>Eius Facilis Quae Saepe</td>
+                        <td>25/2/2007</td>
+                        <td>Draft</td>
+                     </tr>
+                     <tr>
+                        <td>Eos Temporibus A Reiciendis</td>
+                        <td>13/12/2004</td>
+                        <td>Published</td>
+                     </tr>
+                     <tr>
+                        <td>Atque</td>
+                        <td>23/12/2010</td>
+                        <td>Published</td>
+                     </tr>
+                     <tr>
+                        <td>Vitae Aut Temporibus Ut</td>
+                        <td>4/9/2001</td>
+                        <td>Pending</td>
+                     </tr>
+                     <tr>
+                        <td>Eius Facilis Quae Saepe</td>
+                        <td>25/2/2007</td>
+                        <td>Draft</td>
+                     </tr>
+                     <tr>
+                        <td>Eos Temporibus A Reiciendis</td>
+                        <td>13/12/2004</td>
+                        <td>Published</td>
+                     </tr>
+                     <tr>
+                        <td>Atque</td>
+                        <td>23/12/2010</td>
+                        <td>Published</td>
+                     </tr>
+                     <tr>
+                        <td>Vitae Aut Temporibus Ut</td>
+                        <td>4/9/2001</td>
+                        <td>Pending</td>
+                     </tr>
+                     <tr>
+                        <td>Eius Facilis Quae Saepe</td>
+                        <td>25/2/2007</td>
+                        <td>Draft</td>
+                     </tr>
+                     <tr>
+                        <td>Eos Temporibus A Reiciendis</td>
+                        <td>13/12/2004</td>
+                        <td>Published</td>
+                     </tr>
+                     
                   </tbody>
                </table>
             </div>
