--- a/src/news_add.html
+++ b/src/news_add.html
@@ -40,12 +40,12 @@
 
    <main id="news">
       <ul class="secondary-menu">
-         <li>All News</li>
-         <li class="active">Add News</li>
-         <li>Carousel Control</li>
+         <li><a href="news.html">All News</a></li>
+         <li><a href="news_add.html" class="active">Add News</a></li>
       </ul>
       <div class="container">
          <div class="row">
+            <h4>Add News Form :</h4>
             <form class="col s12">
                <div class="row">
                   <div class="input-field col s6">
