phew! i am tired and lost.

--- a/src/news.html
+++ b/src/news.html
@@ -8,6 +8,8 @@
    <link href='https://fonts.googleapis.com/css?family=Inconsolata:400,700' rel='stylesheet' type='text/css'>
    <link href='https://fonts.googleapis.com/css?family=Merriweather+Sans' rel='stylesheet' type='text/css'>
    <link rel="stylesheet" href="../node_modules/materialize-css/dist/css/materialize.css">
+   <link rel="stylesheet" href="../node_modules/kendo/kendo.common-material.min.css">
+   <link rel="stylesheet" href="../node_modules/kendo/kendo.material.min.css">
    <link rel="stylesheet" href="style.css">
 </head>
 
@@ -47,16 +49,7 @@
          <div class="carousel-wrapper row">
             <div id="carousel-control" class="col s12">
                <div class="box box1">
-                  <div class="name">Box 1</div>
-               </div>
-               <div class="box box2">
-                  <div class="name">Box 2</div>
-               </div>
-               <div class="box box3">
-                  <div class="name">Box 3</div>
-               </div>
-               <div class="box box4">
-                  <div class="name">Box 4</div>
+                  <div class="title">Box 1</div>
                </div>
             </div>
             <div class="col s12">
@@ -66,7 +59,7 @@
          <div class="news-table row">
             <div class="col s12">
                <table class="bordered striped highlight">
-                  <thead>
+                  <!--<thead>
                      <th data-field="sr.no">Sr. no</th>
                      <th data-field="sports-type">Sports Type</th>
                      <th data-field="news-item">News</th>
@@ -74,89 +67,7 @@
                      <th data-field="status">Status</th>
                      <th data-field="actions">Actions</th>
                   </thead>
-                  <tbody>
-                     <tr>
-                        <td>Atque</td>
-                        <td>23/12/2010</td>
-                        <td>Published</td>
-                     </tr>
-                     <tr>
-                        <td>Vitae Aut Temporibus Ut</td>
-                        <td>4/9/2001</td>
-                        <td>Pending</td>
-                     </tr>
-                     <tr>
-                        <td>Eius Facilis Quae Saepe</td>
-                        <td>25/2/2007</td>
-                        <td>Draft</td>
-                     </tr>
-                     <tr>
-                        <td>Eos Temporibus A Reiciendis</td>
-                        <td>13/12/2004</td>
-                        <td>Published</td>
-                     </tr>
-                     <tr>
-                        <td>Atque</td>
-                        <td>23/12/2010</td>
-                        <td>Published</td>
-                     </tr>
-                     <tr>
-                        <td>Vitae Aut Temporibus Ut</td>
-                        <td>4/9/2001</td>
-                        <td>Pending</td>
-                     </tr>
-                     <tr>
-                        <td>Eius Facilis Quae Saepe</td>
-                        <td>25/2/2007</td>
-                        <td>Draft</td>
-                     </tr>
-                     <tr>
-                        <td>Eos Temporibus A Reiciendis</td>
-                        <td>13/12/2004</td>
-                        <td>Published</td>
-                     </tr>
-                     <tr>
-                        <td>Atque</td>
-                        <td>23/12/2010</td>
-                        <td>Published</td>
-                     </tr>
-                     <tr>
-                        <td>Vitae Aut Temporibus Ut</td>
-                        <td>4/9/2001</td>
-                        <td>Pending</td>
-                     </tr>
-                     <tr>
-                        <td>Eius Facilis Quae Saepe</td>
-                        <td>25/2/2007</td>
-                        <td>Draft</td>
-                     </tr>
-                     <tr>
-                        <td>Eos Temporibus A Reiciendis</td>
-                        <td>13/12/2004</td>
-                        <td>Published</td>
-                     </tr>
-                     <tr>
-                        <td>Atque</td>
-                        <td>23/12/2010</td>
-                        <td>Published</td>
-                     </tr>
-                     <tr>
-                        <td>Vitae Aut Temporibus Ut</td>
-                        <td>4/9/2001</td>
-                        <td>Pending</td>
-                     </tr>
-                     <tr>
-                        <td>Eius Facilis Quae Saepe</td>
-                        <td>25/2/2007</td>
-                        <td>Draft</td>
-                     </tr>
-                     <tr>
-                        <td>Eos Temporibus A Reiciendis</td>
-                        <td>13/12/2004</td>
-                        <td>Published</td>
-                     </tr>
-                     
-                  </tbody>
+                  <tbody></tbody>-->
                </table>
             </div>
          </div>
@@ -165,6 +76,7 @@
 
    <script src="../node_modules/Sortable.min.js"></script>
    <script src="../node_modules/jquery/dist/jquery.js"></script>
+   <script src="../node_modules/kendo/kendo.all.min.js"></script>
    <script src="../node_modules/materialize-css/dist/js/materialize.js"></script>
    <script src="js/news/index.js"></script>
 </body>
