--- a/src/index.html
+++ b/src/index.html
@@ -48,8 +48,10 @@
          </div>
       </div>
    </main>
+   <script src="../node_modules/es6-promise/dist/es6-promise.js"></script>
    <script src="../node_modules/jquery/dist/jquery.js"></script>
    <script src="../node_modules/materialize-css/dist/js/materialize.js"></script>
+   <script src="js/_utils.js"></script>
    <script src="js/login.js"></script>
 </body>
 
