--- a/src/news.html
+++ b/src/news.html
@@ -8,8 +8,6 @@
    <link href='https://fonts.googleapis.com/css?family=Inconsolata:400,700' rel='stylesheet' type='text/css'>
    <link href='https://fonts.googleapis.com/css?family=Merriweather+Sans' rel='stylesheet' type='text/css'>
    <link rel="stylesheet" href="../node_modules/materialize-css/dist/css/materialize.css">
-   <link rel="stylesheet" href="../node_modules/kendo/kendo.common-material.min.css">
-   <link rel="stylesheet" href="../node_modules/kendo/kendo.material.min.css">
    <link rel="stylesheet" href="style.css">
 </head>
 
@@ -44,18 +42,9 @@
       <ul class="secondary-menu">
          <li><a href="news.html" class="active">All News</a></li>
          <li><a href="news_add.html">Add News</a></li>
+         <li class="hide"><a href="carousel_control.html">Carousel Control</a></li>
       </ul>
       <div class="content">
-         <div class="carousel-wrapper row">
-            <div id="carousel-control" class="col s12">
-               <div class="box box1">
-                  <div class="title">Box 1</div>
-               </div>
-            </div>
-            <div class="col s12">
-               <a href="#!" class="btn waves-effect waves-light">Save Carousel</a>
-            </div>
-         </div>
          <div class="news-table row">
             <div class="col s12">
                <table class="bordered striped highlight">
@@ -74,11 +63,9 @@
       </div>
    </main>
 
-   <script src="../node_modules/Sortable.min.js"></script>
    <script src="../node_modules/jquery/dist/jquery.js"></script>
-   <script src="../node_modules/kendo/kendo.all.min.js"></script>
    <script src="../node_modules/materialize-css/dist/js/materialize.js"></script>
-   <script src="js/news/index.js"></script>
+   <script src="js/news/news_table.js"></script>
 </body>
 
 </html>
