--- a/src/news.html
+++ b/src/news.html
@@ -42,27 +42,46 @@
       <ul class="secondary-menu">
          <li><a href="news.html" class="active">All News</a></li>
          <li><a href="news_add.html">Add News</a></li>
-         <li class="hide"><a href="carousel_control.html">Carousel Control</a></li>
+         <li class="hide only_admin"><a href="carousel_control.html">Carousel Control</a></li>
       </ul>
       <div class="content">
+         <div class="filter row">
+            <div class="input-field col s6">
+               <select name="" id="">
+                  <option value="" disabled selected>Filter by Sports Type</option>
+                  <option value="cricket">Cricket</option>
+                  <option value="football">Football</option>
+               </select>
+            </div>
+            <div class="input-field col s6">
+               <select name="" id="">
+                  <option value="" disabled selected>Filter by News Status</option>
+                  <option value="published">Published</option>
+                  <option value="unpublished">Unpublished</option>
+                  <option value="draft">Drafts</option>
+               </select>
+            </div>
+         </div>
          <div class="news-table row">
             <div class="col s12">
-               <table class="bordered striped highlight">
-                  <!--<thead>
-                     <th data-field="sr.no">Sr. no</th>
-                     <th data-field="sports-type">Sports Type</th>
-                     <th data-field="news-item">News</th>
-                     <th data-field="date">Date</th>
-                     <th data-field="status">Status</th>
-                     <th data-field="actions">Actions</th>
+               <table>
+                  <thead>
+                     <tr>
+                        <th data-field="headline">Headline</th>
+                        <th data-field="published_date">Published Date</th>
+                        <th data-field="status">Status</th>
+                        <th data-field="actions">Actions</th>
+                     </tr>
                   </thead>
-                  <tbody></tbody>-->
+                  <tbody></tbody>
                </table>
             </div>
          </div>
       </div>
    </main>
 
+   <script src="../node_modules/es6-promise/dist/es6-promise.js"></script>
+   <script src="js/_utils.js"></script>
    <script src="../node_modules/jquery/dist/jquery.js"></script>
    <script src="../node_modules/materialize-css/dist/js/materialize.js"></script>
    <script src="js/news/news_table.js"></script>
