--- a/src/news.html
+++ b/src/news.html
@@ -47,14 +47,14 @@
       <div class="content">
          <div class="filter row">
             <div class="input-field col s6">
-               <select name="" id="">
+               <select name="" id="filter-sportsType">
                   <option value="" disabled selected>Filter by Sports Type</option>
                   <option value="cricket">Cricket</option>
                   <option value="football">Football</option>
                </select>
             </div>
             <div class="input-field col s6">
-               <select name="" id="">
+               <select name="" id="filter-newsStatusType">
                   <option value="" disabled selected>Filter by News Status</option>
                   <option value="published">Published</option>
                   <option value="unpublished">Unpublished</option>
@@ -64,9 +64,11 @@
          </div>
          <div class="news-table row">
             <div class="col s12">
-               <table>
+               <table class="bordered striped">
                   <thead>
                      <tr>
+                        <th>S. no</th>
+                        <th data-field="sports_type">Sports Type</th>
                         <th data-field="headline">Headline</th>
                         <th data-field="published_date">Published Date</th>
                         <th data-field="status">Status</th>
