renamed :  news_add.js

--- a/src/news_add.html
+++ b/src/news_add.html
@@ -117,7 +117,7 @@
 
    <script src="../node_modules/jquery/dist/jquery.js"></script>
    <script src="../node_modules/materialize-css/dist/js/materialize.js"></script>
-   <script src="js/news/add-news.js"></script>
+   <script src="js/news/news_add.js"></script>
 
 </body>
 
