--- a/src/news_add.html
+++ b/src/news_add.html
@@ -114,7 +114,7 @@
          </div>
       </div>
    </main>
-
+   <script src="js/_utils.js"></script>
    <script src="../node_modules/jquery/dist/jquery.js"></script>
    <script src="../node_modules/materialize-css/dist/js/materialize.js"></script>
    <script src="js/news/news_add.js"></script>
