renamed : utils folder to _utils.

--- a/src/index.html
+++ b/src/index.html
@@ -13,8 +13,8 @@
 
 <body>
    <script src="../node_modules/es6-promise/dist/es6-promise.js"></script>
-   <script src="js/utils/utility.js"></script>
-   <script src="js/utils/user.js"></script>
+   <script src="js/_utils/utility.js"></script>
+   <script src="js/_utils/user.js"></script>
    <script src="js/index/index.js"></script>
 </body>
 
