--- a/src/login.html
+++ b/src/login.html
@@ -50,8 +50,8 @@
    <script src="../node_modules/es6-promise/dist/es6-promise.js"></script>
    <script src="../node_modules/jquery/dist/jquery.js"></script>
    <script src="../node_modules/materialize-css/dist/js/materialize.js"></script>
-   <script src="js/utils/utility.js"></script>
-   <script src="js/utils/user.js"></script>
+   <script src="js/_utils/utility.js"></script>
+   <script src="js/_utils/user.js"></script>
    <script src="js/login/login.js"></script>
 </body>
 
