fixed : base logiC for news page.

--- a/src/news.html
+++ b/src/news.html
@@ -41,7 +41,7 @@
    <main id="news">
       <ul class="secondary-menu">
          <li><a href="news.html" class="active">All News</a></li>
-         <li><a href="news_add.html">Add News</a></li>
+         <li><a href="/news_form.html?type=add">Add News</a></li>
          <li class="hide only_admin"><a href="carousel_control.html">Carousel Control</a></li>
       </ul>
       <div class="content">
@@ -83,10 +83,12 @@
    </main>
 
    <script src="../node_modules/es6-promise/dist/es6-promise.js"></script>
-   <script src="js/_utils.js"></script>
+   <script src="js/_utils/utility.js"></script>
    <script src="../node_modules/jquery/dist/jquery.js"></script>
+   <script src="js/_utils/user.js"></script>
+   <script src="js/_utils/news.js"></script>
    <script src="../node_modules/materialize-css/dist/js/materialize.js"></script>
-   <script src="js/news/news_table.js"></script>
+   <script src="js/news/news.js"></script>
 </body>
 
 </html>
