fixed : news submenu links

--- a/src/news_form.html
+++ b/src/news_form.html
@@ -41,7 +41,8 @@
    <main id="news">
       <ul class="secondary-menu">
          <li><a href="news.html">All News</a></li>
-         <li><a href="news_add.html" class="active">Add News</a></li>
+         <li><a href="/news_form.html?type=add" class="active">News Form</a></li>
+         <li class="hide only_admin"><a href="carousel_control.html">Carousel Control</a></li>
       </ul>
       <div class="container">
          <div class="row">
