--- a/src/news.html
+++ b/src/news.html
@@ -41,7 +41,7 @@
    <main id="news">
       <ul class="secondary-menu">
          <li><a href="news.html" class="active">All News</a></li>
-         <li><a href="/news_form.html?type=add">Add News</a></li>
+         <li><a href="/news_form.html?type=add">News Form</a></li>
          <li class="hide only_admin"><a href="carousel_control.html">Carousel Control</a></li>
       </ul>
       <div class="content">
