--- a/src/news_form.html
+++ b/src/news_form.html
@@ -46,7 +46,7 @@
       </ul>
       <div class="container">
          <div class="row">
-            <h4>Add News Form :</h4>
+            <h4>News Form :</h4>
             <form class="col s12">
                <div class="row">
                   <div class="input-field col s6">
@@ -55,7 +55,6 @@
                         <option value="CRI">Cricket</option>
                         <option value="Foo">Football</option>
                      </select>
-                     <!--<label for="news-sportstype">Select a Sports Type</label>-->
                   </div>
                   <div class="input-field col s12">
                      <input type="text" id="news-headline">
@@ -101,7 +100,7 @@
                   </div>
                   <div class="input-field col s12">
                      <button class="btn waves-effect waves-light" type="submit" name="action">
-                        Submit
+                        Send for Approval
                      </button>
                      <button class="btn waves-effect waves-light save-as-draft-btn">
                         Save as Draft
@@ -115,10 +114,13 @@
          </div>
       </div>
    </main>
-   <script src="js/_utils.js"></script>
+   <script src="../node_modules/es6-promise/dist/es6-promise.js"></script>
+   <script src="js/_utils/utility.js"></script>
    <script src="../node_modules/jquery/dist/jquery.js"></script>
+   <script src="js/_utils/user.js"></script>
+   <script src="js/_utils/news.js"></script>
    <script src="../node_modules/materialize-css/dist/js/materialize.js"></script>
-   <script src="js/news/news_add.js"></script>
+   <script src="js/news/news_form.js"></script>
 
 </body>
 
