added datatable to the table.

--- a/src/news.html
+++ b/src/news.html
@@ -8,6 +8,7 @@
    <link href='https://fonts.googleapis.com/css?family=Inconsolata:400,700' rel='stylesheet' type='text/css'>
    <link href='https://fonts.googleapis.com/css?family=Merriweather+Sans' rel='stylesheet' type='text/css'>
    <link rel="stylesheet" href="../node_modules/materialize-css/dist/css/materialize.css">
+   <link rel="stylesheet" href="//cdn.datatables.net/1.10.12/css/jquery.dataTables.min.css">
    <link rel="stylesheet" href="style.css">
 </head>
 
@@ -88,6 +89,7 @@
    <script src="js/_utils/user.js"></script>
    <script src="js/_utils/news.js"></script>
    <script src="../node_modules/materialize-css/dist/js/materialize.js"></script>
+   <script src="//cdn.datatables.net/1.10.12/js/jquery.dataTables.min.js"></script>
    <script src="js/news/news.js"></script>
 </body>
 
