added add user link and logout link in sidenav in news page. added logout link logic

--- a/src/news.html
+++ b/src/news.html
@@ -36,6 +36,16 @@
                <i class="material-icons left">pie_chart</i> Stats Control
             </a>
          </li>
+         <li>
+            <a href="add_user.html" class="hide only_admin">
+               <i class="material-icons">face</i>Add user
+            </a>
+         </li>
+         <li>
+            <a href="#!" class="logout-btn">
+               <i class="material-icons">remove_circle</i>Logout
+            </a>
+         </li>
       </ul>
    </header>
 
