--- a/src/chat.html
+++ b/src/chat.html
@@ -35,6 +35,16 @@
                <i class="material-icons left">pie_chart</i> Stats Control
             </a>
          </li>
+         <li>
+            <a href="add_user.html" class="hide only_admin">
+               <i class="material-icons">face</i>Add user
+            </a>
+         </li>
+         <li>
+            <a href="#!" class="logout-btn">
+               <i class="material-icons">remove_circle</i>Logout
+            </a>
+         </li>
       </ul>
    </header>
 
@@ -56,7 +66,10 @@
    </main>
 
    <script src="../node_modules/es6-promise/dist/es6-promise.js"></script>
+   <script src="js/_utils/utility.js"></script>
    <script src="../node_modules/jquery/dist/jquery.js"></script>
+   <script src="js/_utils/user.js"></script>
+   <script src="js/_utils/news.js"></script>
    <script src="../node_modules/materialize-css/dist/js/materialize.js"></script>
    <script src="../node_modules/strophe/strophe.js"></script>
    <script src="../node_modules/strophe.pubsub.js"></script>
