wokring on adding news through form

--- a/src/news_form.html
+++ b/src/news_form.html
@@ -62,8 +62,8 @@
                   <div class="input-field col s6">
                      <select id="news-sportstype">
                         <option value="" disabled selected>Choose a Sports</option>
-                        <option value="CRI">Cricket</option>
-                        <option value="Foo">Football</option>
+                        <option value="cricket">Cricket</option>
+                        <option value="football">Football</option>
                      </select>
                   </div>
                   <div class="input-field col s12">
@@ -77,7 +77,7 @@
                   <div class="file-field input-field col s12">
                      <div class="btn">
                         <span>File</span>
-                        <input type="file">
+                        <input type="file" id="news-article-image">
                      </div>
                      <div class="file-path-wrapper">
                         <input type="text" class="file-path validate" placeholder="Upload news headline Image">
@@ -94,7 +94,7 @@
                   <div class="file-field input-field col s12">
                      <div class="btn">
                         <span>IceBreaker Image</span>
-                        <input type="file">
+                        <input type="file" id="ice-breaker-image">
                      </div>
                      <div class="file-path-wrapper">
                         <input type="text" class="file-path validate" placeholder="Upload Ice Breaker Image">
