addition addition news.

--- a/src/news_form.html
+++ b/src/news_form.html
@@ -62,8 +62,8 @@
                   <div class="input-field col s6">
                      <select id="news-sportstype">
                         <option value="" disabled selected>Choose a Sports</option>
-                        <option value="cricket">Cricket</option>
-                        <option value="football">Football</option>
+                        <option value="c">Cricket</option>
+                        <option value="f">Football</option>
                      </select>
                   </div>
                   <div class="input-field col s12">
