added more modularisation to the code. 1. created const.js 2. improved promise syntax.

--- a/src/login.html
+++ b/src/login.html
@@ -22,7 +22,7 @@
             Welcome to Sports Unity Control Panel. <br />
             Sign in to continue
          </span>
-         <div class="card login-card hide">
+         <div class="card login-card">
             <div class="row">
                <form id="login-form" class="col s12">
                   <div class="card-content">
@@ -50,6 +50,7 @@
    <script src="../node_modules/es6-promise/dist/es6-promise.js"></script>
    <script src="../node_modules/jquery/dist/jquery.js"></script>
    <script src="../node_modules/materialize-css/dist/js/materialize.js"></script>
+   <script src="js/_utils/CONST.js"></script>
    <script src="js/_utils/utility.js"></script>
    <script src="js/_utils/user.js"></script>
    <script src="js/login/login.js"></script>
