--- a/src/news.html
+++ b/src/news.html
@@ -96,6 +96,7 @@
    <script src="../node_modules/es6-promise/dist/es6-promise.js"></script>
    <script src="js/_utils/utility.js"></script>
    <script src="../node_modules/jquery/dist/jquery.js"></script>
+   <script src="js/_utils/CONST.js"></script>
    <script src="js/_utils/user.js"></script>
    <script src="js/_utils/news.js"></script>
    <script src="../node_modules/materialize-css/dist/js/materialize.js"></script>
