--- a/src/news.html
+++ b/src/news.html
@@ -59,16 +59,16 @@
             <div class="input-field col s6">
                <select name="" id="filter-sportsType">
                   <option value="" disabled selected>Filter by Sports Type</option>
-                  <option value="cricket">Cricket</option>
-                  <option value="football">Football</option>
+                  <option value="c">Cricket</option>
+                  <option value="f">Football</option>
                </select>
             </div>
             <div class="input-field col s6">
                <select name="" id="filter-newsStatusType">
                   <option value="" disabled selected>Filter by News Status</option>
-                  <option value="published">Published</option>
-                  <option value="unpublished">Unpublished</option>
-                  <option value="draft">Drafts</option>
+                  <option value="Published">Published</option>
+                  <option value="UnPublished">Unpublished</option>
+                  <option value="Draft">Drafts</option>
                </select>
             </div>
          </div>
