--- a/src/news_form.html
+++ b/src/news_form.html
@@ -61,7 +61,7 @@
                <div class="row">
                   <div class="input-field col s6">
                      <select id="news-sportstype" name="sport_type">
-                        <option value="" disabled selected>Choose a Sports</option>
+                        <option value="" disabled>Choose a Sports</option>
                         <option value="c">Cricket</option>
                         <option value="f">Football</option>
                      </select>
@@ -70,10 +70,10 @@
                      <input type="text" id="news-headline" name="headline">
                      <label for="news-headline">Set a Headline</label>
                   </div>
-                  <div class="input-field col s12">
+                  <!--<div class="input-field col s12">
                      <input type="text" id="news-article-content" name="article_image_name">
                      <label for="news-article-content">Article Image Content</label>
-                  </div>
+                  </div>-->
                   <div class="file-field input-field col s12">
                      <div class="btn">
                         <span>File</span>
@@ -87,10 +87,10 @@
                      <textarea id="news-summary" class="materialize-textarea" name="article_content"></textarea>
                      <label for="news-summary">Summary</label>
                   </div>
-                  <div class="input-field col s12">
+                  <!--<div class="input-field col s12">
                      <input type="text" id="news-icebreaker" name="ice_breaker_name">
                      <label for="news-icebreaker">Icebreaker</label>
-                  </div>
+                  </div>-->
                   <div class="file-field input-field col s12">
                      <div class="btn">
                         <span>IceBreaker Image</span>
